--- a/app/src/main/res/layout/item_image_list.xml
+++ b/app/src/main/res/layout/item_image_list.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/item_picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
         android:contentDescription="@string/app_name"/>
 
 </LinearLayout>
