--- a/app/src/main/res/layout/item_image_list.xml
+++ b/app/src/main/res/layout/item_image_list.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:padding="2dp">
 
     <ImageView
         android:id="@+id/item_picture"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:contentDescription="@string/app_name"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/app_name"
+        android:scaleType="centerCrop"/>
 
 </LinearLayout>
